# simutrador-data-manager

./: .gitignore  LICENSE  README.md  STATUS.md  ai-index.md
backend/: .gitignore  API_KEY_SETUP.md  README.md  openapi.json  pyproject.toml  pyrightconfig.json  pytest.ini  test_api.json
backend/demos/: demo_polygon_switch.py  demo_vendor_agnostic.py
backend/src/: __init__.py  main.py  openapi.json
backend/src/api/: __init__.py  data_analysis.py  nightly_update.py  simulation.py  trading_data.py
backend/src/core/: logger_config.py  settings.py  timeframe_utils.py
backend/src/environments/: .env.dev
backend/src/models/: __init__.py  asset_types.py  enums.py  nightly_update_api.py  orders.py  price_data.py  requests.py  responses.py
backend/src/services/: __init__.py  gap_filling_service.py  polygon_url_generator.py
backend/src/services/classification/: __init__.py  asset_classification_service.py
backend/src/services/data_providers/: __init__.py  data_provider_factory.py  data_provider_interface.py  financial_modeling_prep_client.py  polygon_client.py  tiingo_client.py
backend/src/services/progress/: __init__.py  nightly_update_progress_service.py
backend/src/services/storage/: __init__.py  data_resampling_service.py  data_storage_service.py
backend/src/services/validation/: __init__.py  stock_market_validation_service.py
backend/src/services/workflows/: __init__.py  stock_market_nightly_update_service.py  stock_market_resampling_workflow.py  trading_data_updating_service.py
backend/src/tests/: README.md  conftest.py
docs/: data-analysis.md  (+3 more)
(+107 files in other folders)
